# rinha2026

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  PERFORMANCE_TEST_REPORT.md  README.md  REMOTE_PROFILING.md  docker-compose-ghcr.yml  docker-compose.yml  info.json
VERSAO-c/: Dockerfile  Makefile  README.md  docker-compose.ghcr.yml  docker-compose.yml  score_one  tier_one  verify-tier
VERSAO-c/include/: decision_tree.h  fast_path.h  http.h  index.h  ingest.h  knn.h  tier_score.h  time_parse.h
VERSAO-c/src/: compare_counts.c  decision_tree.c  distance_avx2.c  fast_path.c  healthcheck.c  http_handler.c  http_response.c  index_mmap.c  index_quantize.c  ingest_features.c  ingest_json.c  knn.c  lb_main.c  platform_fd_gateway.c  platform_lb.c  platform_scm.c  score_one.c  server.c  tier_one.c  tier_score.c  time_parse.c  verify_tier.c
scripts/: analyze_webhook_telemetry.py  build-index-if-needed.sh  decision_tree.nodes  gen_decision_tree.py  perf_sink.py  push-image.ps1  push-image.sh  summarize_perf.py  synthetic_data.py  train_decision_tree.py  train_from_payloads.py  watch_results_preview.py  webhook_vps.py
src/: config.rs  lb.rs  lib.rs  main.rs  perf.rs
src/http/: handler.rs  health.rs  mod.rs  response.rs  runtime.rs  sync_handler.rs
src/index/: mmap.rs  mod.rs  quantize.rs
src/ingest/: cache.rs  features.rs  json.rs  linear.rs  mod.rs  numbers.rs
src/platform/: fd_gateway.rs  load_balancer.rs  mod.rs  scm.rs
src/search/: decision_tree.rs  fast_path.rs  hot_score.rs  knn.rs  mod.rs  tier_score.rs  warmup.rs
test/: README.md  accuracy.js  body.json  rust_counts.txt  smoke.js  submission-compose.yml  submission-plus-c.yml  test.js
visualizador/: README.md  package.json  server.mjs
visualizador/lib/: tier-engine.mjs  tree-loader.mjs
visualizador/public/: index.html
visualizador/public/css/: style.css
visualizador/public/js/: app.js  scene3d.js  tech-models.js
