[package]
name = "fraud-detector"
version = "0.3.0"
edition = "2021"

[lib]
name = "fraud_detector"
path = "src/lib.rs"

[features]
default = ["submission"]
# Imagem Docker / Rinha: tier + fd_gateway + k-NN (hybrid scoring).
submission = ["knn-index"]
# Ferramentas e modo TCP com índice mmap.
knn-index = ["dep:memmap2"]
monoio-http = ["dep:monoio", "dep:socket2", "knn-index"]

[dependencies]
libc = "0.2"
memchr = "2.7"
monoio = { version = "0.2", features = ["legacy", "macros"], optional = true }
memmap2 = { version = "0.9", optional = true }
anyhow = "1"
socket2 = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "build-index"
path = "src/bin/build_index.rs"
required-features = ["knn-index"]

[[bin]]
name = "healthcheck"
path = "src/bin/healthcheck.rs"

[[bin]]
name = "lb"
path = "src/lb.rs"

[[bin]]
name = "verify-fast"
path = "src/bin/verify_fast.rs"
required-features = ["knn-index"]

[[bin]]
name = "verify-tier"
path = "src/bin/verify_tier.rs"

[[bin]]
name = "verify-fast-tier"
path = "src/bin/verify_fast_tier.rs"

[[bin]]
name = "analyze-fast-expand"
path = "src/bin/analyze_fast_expand.rs"

[[bin]]
name = "analyze-tree-ratio"
path = "src/bin/analyze_tree_ratio.rs"

[[bin]]
name = "analyze-tree-split"
path = "src/bin/analyze_tree_split.rs"

[[bin]]
name = "tier-paths"
path = "src/bin/tier_paths.rs"

[[bin]]
name = "verify-tier-raw"
path = "src/bin/verify_tier_raw.rs"

[[bin]]
name = "verify-c-parity"
path = "src/bin/verify_c_parity.rs"

[[bin]]
name = "export-tier-counts"
path = "src/bin/export_tier_counts.rs"

[[bin]]
name = "pgo-train"
path = "src/bin/pgo_train.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
